--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,7 @@
 <form>
     用户名：<input type="text" name="username"><br>
     密码：<input type="password" name="password"><br>
+    {% csrf_token %}
     <input type="submit" value="登陆">&nbsp;&nbsp;<input type="reset" value="清空"><br>
 </form>
 
