--- a/templates/regist.html
+++ b/templates/regist.html
@@ -10,6 +10,7 @@
     密码：<input type="password" name="password"><br>
     重复密码：<input type="password" name="repassword"><br>
     <input type="submit" value="登陆">&nbsp;&nbsp;<input type="reset" value="清空"><br>
+    {% csrf_token %}
 </form>
 </body>
 </html>
